--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,26 +9,28 @@
 }
 
 #lose {
-    width: 300px;
-    height: 300px;
+    width: 820px;
+    height: 500px;
     border: 5px solid;
     display: none;
     justify-content: center;
     position: absolute;
-    top: 230px;
-    left: 600px;
-    background-image: url("../Images/castillo.png");
+    top: 120px;
+    left: 360px;
+    background-image: url("../Images/loseImg.jpg");
+    background-size: cover;
 }
 
 #win {
-    width: 300px;
-    height: 300px;
+    width: 820px;
+    height: 500px;
     border: 5px solid;
     display: none;
     justify-content: center;
     position: absolute;
-    top: 230px;
-    left: 600px;
-    background-image: url("../Images/key.png");
+    top: 120px;
+    left: 360px;
+    background-image: url("../Images/winImg.jpeg");
+    background-size: cover;
 
 }
